[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overrule"
version = "0.3.0"
description = "Runtime AI governance SDK — intercept, evaluate, and enforce compliance policies on LLM and agent tool calls."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Rashid Ali Khan", email = "rashidalikhan99@gmail.com" },
]
keywords = ["ai", "governance", "compliance", "llm", "guardrails", "eu-ai-act", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
all = ["openai>=1.0.0", "anthropic>=0.30.0"]
dev = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://overrule.dev"
Documentation = "https://github.com/overruledev/overrule-sdk#readme"
Repository = "https://github.com/overruledev/overrule-sdk"
Issues = "https://github.com/overruledev/overrule-sdk/issues"
Changelog = "https://github.com/overruledev/overrule-sdk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["overrule"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "PTH"]
ignore = ["S101", "S110", "S311"]

[tool.ruff.lint.isort]
known-first-party = ["overrule"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
